@@ -22,8 +22,16 @@ namespace Stetic.Wrapper {
 		public override void Wrap (object obj, bool initialized)
 		{
 			base.Wrap (obj, initialized);
-			if (!initialized)
-				frame.Label = frame.Name;
+			if (!initialized) {
+				frame.Label = "<b>" + frame.Name + "</b>";
+				((Gtk.Label)frame.LabelWidget).UseMarkup = true;
+				frame.Shadow = Gtk.ShadowType.None;
+				Gtk.Alignment align = new Gtk.Alignment (0, 0, 1, 1);
+				align.LeftPadding = 12;
+				Alignment align_wrapper = (Alignment)ObjectWrapper.Create (stetic, typeof (Alignment), align);
+				align_wrapper.AddPlaceholder ();
+				ReplaceChild (frame.Child, (Gtk.Widget)align_wrapper.Wrapped);
+			}
 		}
 
 		Gtk.Frame frame {
